<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.misht.prototype.Prototype">

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:layout_marginBottom="35dp"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="187dp"
        android:background="@drawable/back"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:labelFor="@+id/editText"
        android:textAlignment="viewStart"
        android:textColorHint="#0d1300"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:layout_marginBottom="35dp"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="45dp"
        android:background="@drawable/back"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:labelFor="@+id/editText2"
        android:textAlignment="viewStart"
        android:textColor="@android:color/background_dark"
        android:textColorHint="#0d1300"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginBottom="87dp"
        android:layout_marginEnd="101dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="35dp"
        android:background="@android:color/holo_green_light"
        android:onClick="sendMessage"
        android:text="@string/login"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="138dp"
        android:layout_height="114dp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="125dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_account_circle_black_24dp" android:contentDescription="@string/todo" />

</android.support.constraint.ConstraintLayout>
