<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.misht.prototype.NewPayment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="475dp"
        android:layout_marginEnd="21dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="6dp"
        android:text="@string/recipient_name"
        android:textAlignment="viewStart"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="420dp"
        android:layout_marginEnd="21dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/back"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@+id/editText6"
        android:text="@string/rpn"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="372dp"
        android:layout_marginEnd="21dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="20dp"
        android:text="@string/recipient_account"
        android:textAlignment="viewStart"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText6" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="311dp"
        android:layout_marginEnd="21dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/back"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@+id/editText8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="264dp"
        android:layout_marginEnd="21dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="20dp"
        android:text="@string/payment_information"
        android:textAlignment="viewStart"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText8" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="196dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/back"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@+id/editText9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editText10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editText10"
        android:layout_width="208dp"
        android:layout_height="0dp"
        android:layout_marginBottom="196dp"
        android:layout_marginEnd="21dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/back"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@+id/editText10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editText9"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="78dp"
        android:layout_marginEnd="110dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="60dp"
        android:background="@android:color/holo_green_light"
        android:onClick="sendMessage2"
        android:text="@string/accept"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText9" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        android:layout_marginEnd="250dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="15dp"
        android:text="@string/date"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText9" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="199dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        android:layout_marginEnd="21dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/amount"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/editText10" />
</android.support.constraint.ConstraintLayout>
